--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Julieta Paz - Portifolio</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <div>
+                <a href="#" class="menu-link">Protótipos</a>
+                <a href="#" class="menu-link">Protótipos</a>
+                <a href="#" class="menu-link">Arte</a>
+                <a href="#" class="menu-link">Sobre 2</a>
+            </div>
+        </header>
+    </main>
 </body>
 </html>
