--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <main>
         <header>
-            <div>
-                <a href="#" class="menu-link">Protótipos</a>
+            <div class="menu">
+                <a href="#" class="menu-logo">Julieta Paz</a>
                 <a href="#" class="menu-link">Protótipos</a>
                 <a href="#" class="menu-link">Arte</a>
-                <a href="#" class="menu-link">Sobre 2</a>
+                <a href="#" class="menu-link">Sobre</a>
             </div>
         </header>
     </main>
