Created the header and menu

--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Julieta Paz - Portifolio</title> 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="resetcss.css">
-    <title>Julieta Paz - Portifolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <main>
         <header>
+            <div class="logo">
+                <a href="#">JULIETA PAZ</a>
+            </div>
+            <nav>
+                <a href="#">PROTÓTIPOS</a>
+                <a href="#">ARTES</a>
+                <a href="#">SOBRE</a>
+            </nav>
         </header>
     </main>
 </body>
