card modifyied to be alike the prototype

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,8 @@
         <link rel="stylesheet" href="../css/style.css">
         
         <link href="https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Stick+No+Bills:wght@700&display=swap" rel="stylesheet">
+
 
     </head>
     <body>    
@@ -39,7 +40,7 @@
                                         <span class="overlay"></span>
 
                                         <div class="card-image">
-                                            <img src="../images/profile1.jpg" alt="" class="card-img">
+                                            <img src="../images/teste.jpg" alt="" class="card-img">
                                         </div>
                                     </div>
 
